                         - SSH: Increase scp size limit to 10MB
                         - Console: Show usage line if non-empty with optional subcommands
                         - Module: Add quick-and-dirty optional module task stack listing
                         - SIMCOM: Add a message, after ppp shutdown, to confirm that we get a response from the ppp task.

2018-03-25 MWJ  3.1.001  OTA release
                         - Add task state to 'module tasks' output
                         - Avoid SPIRAM being lumped in with DRAM in 'module memory' output
                         - Wifi: Make 'wifi scan' command block, and show nice summary of
                           discovered access points
                         - Show firmware version and hardware info on console startup
                         - Show hidden SSIDs as <HIDDEN> in wifi scan
                         - Add logging, with reason, for some wifi events
                         - WIFI refactor; use pcp to power on/off wifi driver, and then normal
                           wifi state to control driver mode changes. Improvements to wifi
                           stability and compatibility.
                         - Twizy v0.13: kickdown implementation, throttle display
                         - Provide a 'test watchdog' command to test watchdog timers
                         - Initialise watchdog timer to start, and reboot if watchdog timeout
                         - Enable watchdog timer for housekeeping task

2018-03-21 MWJ  3.1.000  OTA release
                         - Tesla Model S basic vehicle support
                         - Provide an option for aggressive allocation of SPI RAM (OVMS HW 3.1)
                         - Low-level boot framework for storing data across CPU resets/sleeps
                         - Webserver: support add to home screen / web-app mode
                         - Boot/Autostart: crash detection & counting, temporary autostart inhibit